<resources>
    <!--APP-->
    <string name="app_name">Automated Utilities App</string>

    <!--bottom_navigation_menu menu-->
    <string name="home">Home</string>
    <string name="laundry">Laundry</string>

    <!--fragment_start-->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_to">Welcome to</string>
    <string name="automated_utilities">Automated Utilities</string>

    <!--fragment-register-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_member_login_me">Already a member! Login me</string>
    <string name="short_name_error">Name too short</string>
    <string name="email_error">Invalid email address</string>
    <string name="password_length_error">Password length too short</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="registering">Registering</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="icon">icon</string>
    <string name="sign_up">Sign Up</string>

    <!--fragment_login-->
    <string name="forgot_password">Forgot password</string>
    <string name="not_a_member_sign_up_now">Not a member. Sign up now</string>
    <string name="enter_email_for_password_reset">Enter email for password reset</string>
    <string name="logged_in">Logged in</string>
    <string name="request_password">Request password</string>
    <string name="cancel">Cancel</string>
    <string name="email_sent">Email sent</string>
    <string name="something_went_wrong_try_again">Something went wrong. Try again</string>
    <string name="logging_in">Logging in</string>
    <string name="sending_email">Sending email</string>
    <string name="sign_in">Sign In</string>

    <!--laundry_login-->
    <string name="new_laundry">New Laundry</string>
    <string name="old_laundry">Old Laundry</string>
    <string name="dues">Dues</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CANCEL">CANCEL</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="error_occurred">Error Occurred</string>

</resources>
