<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.login_and_registration.LoginFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#A4FFA4">

      <ImageView
          android:id="@+id/appIcon"
          android:layout_width="120dp"
          android:layout_height="120dp"
          android:layout_marginTop="16dp"
          android:contentDescription="@string/icon"
          android:src="@mipmap/ic_launcher"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent" />


      <LinearLayout
          android:id="@+id/dataLayout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:orientation="vertical"
          android:paddingStart="16dp"
          android:paddingEnd="16dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/appIcon">


         <EditText
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/rounded_corners"
             android:backgroundTint="@color/colorPrimary"
             android:drawableStart="@drawable/ic_mail_black"
             android:drawablePadding="8dp"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:maxLength="50"
             android:maxLines="1"
             android:padding="10dp"
             android:textColor="@color/colorPrimaryText"
             android:textColorHint="@color/colorPrimaryText"
             android:textSize="@dimen/medium_font"
             tools:ignore="Autofill" />

         <EditText
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/rounded_corners"
             android:backgroundTint="@color/colorPrimary"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="8dp"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:maxLength="20"
             android:maxLines="1"
             android:padding="10dp"
             android:textColor="@color/colorPrimaryText"
             android:textColorHint="@color/colorPrimaryText"
             android:textSize="@dimen/medium_font"
             tools:ignore="Autofill" />


      </LinearLayout>

      <Button
          android:id="@+id/loginButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="70dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="70dp"
          android:background="@drawable/rounded_corners"
          android:backgroundTint="@color/colorSecondary"
          android:clickable="true"
          android:focusable="true"
          android:text="@string/login"
          android:textColor="@color/colorSecondaryText"
          android:textSize="@dimen/medium_font"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/dataLayout" />

      <Button
          android:id="@+id/forgetPasswordButton"
          style="?android:attr/borderlessButtonStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="8dp"
          android:background="@null"
          android:clickable="true"
          android:focusable="true"
          android:text="@string/forgot_password"
          android:textAllCaps="false"
          android:textColor="@color/colorPrimaryText"
          android:textSize="@dimen/small_font"
          app:layout_constraintEnd_toEndOf="@+id/loginButton"
          app:layout_constraintStart_toStartOf="@+id/loginButton"
          app:layout_constraintTop_toBottomOf="@+id/loginButton" />

      <Button
          android:id="@+id/notMemberButton"
          style="?android:attr/borderlessButtonStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:clickable="true"
          android:focusable="true"
          android:gravity="center_horizontal"
          android:textAllCaps="false"
          android:textColor="@color/colorPrimaryText"
          android:textSize="@dimen/small_font"
          android:background="@null"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</layout>