<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.login_and_registration.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

            <Button
                android:id="@+id/newLaundryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/custom_laundry_view_btn"
                android:text="@string/new_laundry"
                android:textStyle="bold"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_font"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/oldLaundryButton"/>

            <Button
                android:id="@+id/oldLaundryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_laundry_view_btn"
                android:text="@string/old_laundry"
                android:textStyle="bold"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_font"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>

            <Button
                android:id="@+id/duesLaundryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_laundry_view_btn"
                android:text="@string/dues"
                android:textStyle="bold"
                android:padding="12dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_font"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/oldLaundryButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>