<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.login_and_registration.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_registration_background_gradient">

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/label_font"
            android:gravity="center_horizontal"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <LinearLayout
            android:id="@+id/dataLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpTextView">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                android:textSize="@dimen/medium_font"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_mail_black"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                android:textSize="@dimen/medium_font"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                android:textSize="@dimen/medium_font"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/passwordConfirmEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                android:textSize="@dimen/medium_font"
                tools:ignore="Autofill" />

        </LinearLayout>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/colorSecondary"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/medium_font"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataLayout" />

        <Button
            android:id="@+id/alreadyRegisteredButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/small_font"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>